tenzir/tests/exec/operators/fluent-bit/invalid_plugin.txt
error: failed to setup Fluent Bit `does-not-exist-2` output plugin 
 --> exec/operators/fluent-bit/invalid_plugin.tql:4:15
  |
4 | to_fluent_bit "does-not-exist-2"
  |               ^^^^^^^^^^^^^^^^^^ 
  |
  = note: error code `-1`
